JumpScript/tests/baselines/reference/noUnusedLocals_writeOnlyProperty_dynamicNames.errors.txt
tests/cases/compiler/noUnusedLocals_writeOnlyProperty_dynamicNames.jump(4,13): error TS6133: '[x]' is declared but its value is never read.


==== tests/cases/compiler/noUnusedLocals_writeOnlyProperty_dynamicNames.jump (1 errors) ====
    const x = Symbol("x");
    const y = Symbol("y");
    class C {
        private [x]: number;
                ~~~
!!! error TS6133: '[x]' is declared but its value is never read.
        private [y]: number;
        m() {
            this[x] = 0; // write-only
            this[y];
        }
    }
    